backend/scripts/_nodes_check.txt
  File "<string>", line 10
    print(f'  id={x[\
                   ^
SyntaxError: '[' was never closed
